--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -39,8 +39,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>One section on promises</li>
-    
+    <li>One section on promises in ecma</li>
+    <li>One section on Private variables, Private Methods & Privileged methods placed in ecma</li>
   </ol>
   <hr />
 
