--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,11 +3,10 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Thursday Aug 31st, 2017</h2>
+    <h2 class="date">Thursday September 21st, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
     <h3 class="subtitle"> placeholder</h3>
-    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Typical JavaScript interview exercises (explained)<br>{ author: <a href="https://twitter.com/_maxpou">@_maxpou</a> }<a href="https://t.co/k7oSKL3QFM">https://t.co/k7oSKL3QFM</a></p>&mdash; The Practical Dev (@ThePracticalDev) <a href="https://twitter.com/ThePracticalDev/status/900795596180684802">August 24, 2017</a></blockquote>
-
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I just published “<a href="https://twitter.com/hashtag/JavaScript?src=hash">#JavaScript</a> ES 2017: Learn Object.keys, Object.values, and Object.entries” <a href="https://t.co/uhEunbIoTp">https://t.co/uhEunbIoTp</a> <a href="https://twitter.com/hashtag/es2017?src=hash">#es2017</a> <a href="https://twitter.com/hashtag/js?src=hash">#js</a> <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a></p>&mdash; Brandon Morelli (@BrandonMorelli) <a href="https://twitter.com/BrandonMorelli/status/895633805716799488">August 10, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -19,8 +18,27 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
+
     <hr />
   -->
+  <h2 class="date">Thursday September 21st, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Promises was a chore. I still have a great deal to practice on to fully understand what seems simple: es7 "await()" and async funks. --Overall, yesterday was a good one. The private variables, methods, privileged entry is useful. --Edit to the codepen example still needs to be done. I'm into Dan Wellman's es6 again and going to alternate with Kyle Simpson's FEM class on Javascript rethinking async js</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I just published “<a href="https://twitter.com/hashtag/JavaScript?src=hash">#JavaScript</a> ES 2017: Learn Object.keys, Object.values, and Object.entries” <a href="https://t.co/uhEunbIoTp">https://t.co/uhEunbIoTp</a> <a href="https://twitter.com/hashtag/es2017?src=hash">#es2017</a> <a href="https://twitter.com/hashtag/js?src=hash">#js</a>
+  <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a></p>&mdash; Brandon Morelli (@BrandonMorelli) <a href="https://twitter.com/BrandonMorelli/status/895633805716799488">August 10, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>More additions to Wellman's es6 and additions to the es6 view</li>
+    <li>training on Scratch for tomorrow's class</li>
+    <li><span class="ltred">Potential Blocks:</span> only a few hours today. Need lots of sleep to face litte monsters tomorrow</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+
+  <hr />
 
   <h2 class="date">Wednesday September 20th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
