--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,11 +31,12 @@
   <ol class="todo">
     <li>More additions to Wellman's es6 and additions to the es6 view</li>
     <li>training on Scratch for tomorrow's class</li>
+    <li class="ltgreen">For tomorrow: do entry on "tagged template strings"</li>
     <li><span class="ltred">Potential Blocks:</span> only a few hours today. Need lots of sleep to face litte monsters tomorrow</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>ES6 Wellman's training on spread operators: 2 examples</li>
   </ol>
 
   <hr />
