cleanup & journal entry

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,10 +3,10 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Thursday September 21st, 2017</h2>
+    <h2 class="date">Friday September 22st, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
     <h3 class="subtitle"> placeholder</h3>
-<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I just published “<a href="https://twitter.com/hashtag/JavaScript?src=hash">#JavaScript</a> ES 2017: Learn Object.keys, Object.values, and Object.entries” <a href="https://t.co/uhEunbIoTp">https://t.co/uhEunbIoTp</a> <a href="https://twitter.com/hashtag/es2017?src=hash">#es2017</a> <a href="https://twitter.com/hashtag/js?src=hash">#js</a> <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a></p>&mdash; Brandon Morelli (@BrandonMorelli) <a href="https://twitter.com/BrandonMorelli/status/895633805716799488">August 10, 2017</a></blockquote>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo) <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -21,6 +21,26 @@
 
     <hr />
   -->
+  <h2 class="date">Friday September 22st, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Not much to report. Good work yesterday. This whole site needs a rebuild. Enjoying my new job...but more devving to be done. --Considering hosting a codepen meetup.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo)
+  <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Enhancing Objects ES6</li>
+    <li>.repeat() method ES6</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+
+  <hr />
+
   <h2 class="date">Thursday September 21st, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Promises was a chore. I still have a great deal to practice on to fully understand what seems simple: es7 "await()" and async funks. --Overall, yesterday was a good one. The private variables, methods, privileged entry is useful. --Edit to the codepen example still needs to be done. I'm into Dan Wellman's es6 again and going to alternate with Kyle Simpson's FEM class on Javascript rethinking async js</h3>
