--- a/states/es6/es6.html
+++ b/states/es6/es6.html
@@ -6,6 +6,41 @@
 
   <!--
 -->
+<div class="simple-wine-frame thin softwhite"><h3 class="chtitle">Template & tagged strings</h3>
+
+<h3 class="softwhite">A simple template string gives us this</h3>
+<pre class="prettyprint w80 txt-left ctr">
+let num1 = 1;
+let bool = true;
+let sentence = `Fewer things are more ${bool} than that ${num1} plus ${num1} equals ${num1 + num1}`;
+console.log(sentence);
+// Fewer things are more true than that 1 plus 1 equals 2
+</pre>
+
+<br /><h3 class="softwhite">Tagged strings</h3>
+
+<p class="chtitle softwhite">Tagging strings gives us the power to "pre-process" the string. <br />
+We create a function and 'call' that function with the template string as an argument that is <em>splayed</em> into it's component parts</p>
+<pre class="prettyprint w80 txt-left ctr">
+...
+
+let tagged = function(strArr, ...vals) {
+  console.log('strArr:', strArr); // strArr: ["Fewer things are more ", " than that ", " plus ", " equals ", "", raw: Array(5)]
+  console.log('...vals: ', vals); // ...vals:  [true, 1, 1, 2]
+};
+
+tagged`Fewer things are more ${bool} than that ${num1} plus ${num1} equals ${num1 + num1}`;
+</pre>
+<hr>
+<code class="ltgreen"><span class="underline">Fewer things are more </span><span class="softsand">${bool}</span><span class="underline"> than that </span><span class="softsand">${num1}</span><span class="underline"> plus </span><span class="softsand">${num1}</span><span class="underline"> equals </span><span class="softsand">${num1 + num1}</span><span class="ltred">_</span></code>
+<br />*Note the very last empty <code>""</code> at the end of the array.
+
+
+
+
+
+</div>
+<hr>
 <div class="plain-frame1"><h3 class="chtitle softred">ES6 Object Enhancement & .repeat() method</h3>
 <p>From ES5...</p>
 <pre class="prettyprint w30 ctr">const captainKirk = {
