--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,10 +3,11 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Friday September 22st, 2017</h2>
-    <h4 class="sleep">Slept: 8 hours</h4><br><br>
+    <h2 class="date">Saturday September 23rd, 2017</h2>
+    <h4 class="sleep">Slept: 6 hours</h4><br><br>
     <h3 class="subtitle"> placeholder</h3>
-<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo) <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.
+<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo) <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -21,6 +22,23 @@
 
     <hr />
   -->
+  <h2 class="date">Saturday September 23rd, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Tough day at work, today. Feeling a bit overwhelmed. The enormity of what I need to learn can paralyze me if I'm not careful. It is as it has always been... --I've only solved this problem with eating an elephant one bite at a time & simply persist.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>tagged template module (es6 view)</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+
+  <hr />
   <h2 class="date">Friday September 22st, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Not much to report. Good work yesterday. This whole site needs a rebuild. Enjoying my new job...but more devving to be done. --Considering hosting a codepen meetup.</h3>
@@ -36,7 +54,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Enhancing Objects ES6--done</li>
+    <li>.repeat() method ES6--done</li>
   </ol>
 
   <hr />
@@ -51,7 +70,7 @@
   <ol class="todo">
     <li>More additions to Wellman's es6 and additions to the es6 view</li>
     <li>training on Scratch for tomorrow's class</li>
-    <li class="ltgreen">For tomorrow: do entry on "tagged template strings"</li>
+    <li class="dkorange">For tomorrow: do entry on "tagged template strings"</li>
     <li><span class="ltred">Potential Blocks:</span> only a few hours today. Need lots of sleep to face litte monsters tomorrow</li>
   </ol><br>
   <h3>Done: </h3>
