--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -35,7 +35,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>It's quick and dirty, but tagged template literals are done</li>
   </ol>
 
   <hr />
