--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -1130,6 +1130,7 @@ listContainer.addEventListener('click', (event) => {
   <hr>
   <div class="framed5">
     <h3 class="chtitle">Another look at events and the .target property</h3>
+    <h3>A<a href="https://youtu.be/MY0UBGX2FtA?t=229">nice</a> presentation about delegation and <code>.target</code> vs <code>.currentTarget</code></h3>
     <a class="w20" href="https://codepen.io/beau_dev/full/NgJNEO/" target="_blank">Here<h4>is a pen illustrating the powers of the event.target property</h4></a>
     <pre class="prettyprint w40 ctr">
 // index.html
