--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -22,6 +22,24 @@
 
     <hr />
   -->
+  <h2 class="date">Sunday September 24th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Very little sleep last night. Was up all night doing a mobile-first comp for a new version of Code Journal. Was going to do subtractive CSS. Ben Callahan's <a href="https://frontendmasters.com/courses/responsive-web-design/a-myth-about-process" target="_blank">FEM training</a> is the absolute best for this. Just incredible</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.
+<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo) <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Bare bones of 3 breakpoint views in Grid & create repo on Github</li>
+    <li>Implement Grid and mini-modals for click and hover with jQuery--> to be replaced by GSAP in near future.</li>
+    <li><span class="ltred">Potential Blocks:</span> Time. --As always...lack of sleep and low frustration threshold</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Pushed code to git with three reasonable looking layouts using CSS Grid (I ought to be thinking of adding yet another view to this site about RWD)</li>
+  </ol>
+
+  <hr />
   <h2 class="date">Saturday September 23rd, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Tough day at work, today. Feeling a bit overwhelmed. The enormity of what I need to learn can paralyze me if I'm not careful. It is as it has always been... --I've only solved this problem with eating an elephant one bite at a time & simply persist.</h3>
