--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -19,9 +19,28 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-
+https://youtu.be/pw6shMBnISQ
     <hr />
   -->
+
+  <h2 class="date">Tuesday September 26th, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Working on SRCSET based on Christ Coiyer's helpful <a target="_blank" href="https://youtu.be/pw6shMBnISQ">advice</a> Continuing with RWD Repo.</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Maintaining Different Git Identities<br>{ author: <a href="https://twitter.com/maxlmator">@maxlmator</a> }<a href="https://t.co/mzoG7rWona">https://t.co/mzoG7rWona</a></p>&mdash; The Practical Dev (@ThePracticalDev)
+  <a href="https://twitter.com/ThePracticalDev/status/911652381938585600">September 23, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>SRCSETTING Images</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>FINALLY SRCSETTING SOLVED & works brilliantly!</li>
+  </ol>
+
+  <hr />
   <h2 class="date">Sunday September 24th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Very little sleep last night. Was up all night doing a mobile-first comp for a new version of Code Journal. Was going to do subtractive CSS. Ben Callahan's <a href="https://frontendmasters.com/courses/responsive-web-design/a-myth-about-process" target="_blank">FEM training</a> is the absolute best for this. Just incredible</h3>
