--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -22,7 +22,24 @@
 https://youtu.be/pw6shMBnISQ
     <hr />
   -->
+  <h2 class="date">Wednesday September 27th, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Back to styled components, understanding the tools much better now. Leveling up my comfort with React. Hands on the tools (rather than createReactApp) is definitely the way to proceed. Brian Holt recommends css modules for production, but doesn't go into setting up the tools for it. --Probably because there's too much on the curriculum to get into it. It's an amazing class.</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Styled Components</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+    <li>Back into React: Go to vid 21 to prepare porting of this app into REACT with loading data<img class="right w30" src="./img/dataload.png" alt="react data load code"> <br />
+    use .map() an array of one thing into an array of another... <br /> we have an array of data from which to create an array of components of each object in that array. (vid 21 Loadingjsondata) cf. BrianHolt FEM</li>
 
+  </ol>
+  <hr />
   <h2 class="date">Tuesday September 26th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Working on SRCSET based on Christ Coiyer's helpful <a target="_blank" href="https://youtu.be/pw6shMBnISQ">advice</a> Continuing with RWD Repo.</h3>
