--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -6,8 +6,7 @@
     <h2 class="date">Saturday September 23rd, 2017</h2>
     <h4 class="sleep">Slept: 6 hours</h4><br><br>
     <h3 class="subtitle"> placeholder</h3>
-<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">I really enjoyed this article about &#39;this&#39; in JS by <a href="https://twitter.com/zellwk">@zellwk</a>, but his blog also has a host of other topics, too.
-<a href="https://t.co/ECmPtIyD2h">https://t.co/ECmPtIyD2h</a></p>&mdash; Sarah Drasner (@sarah_edo) <a href="https://twitter.com/sarah_edo/status/899505438122622976">August 21, 2017</a></blockquote>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -21,7 +20,28 @@
     </ol>
 https://youtu.be/pw6shMBnISQ
     <hr />
+    https://youtu.be/1DMolJ2FrNY
   -->
+  <h2 class="date">Thursday, September 28th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Woah. Had a tough time dealing with manipulating the result of a promise call today. --Pushing, that is, to the first arg in a reduce() method. But thankfully, I wrote about it in the ecma view.
+  <br /> There is a particular line: <code>bird[array[0]] = bird[array[0]] || [];</code> This kind of thing... removing the necessity for an if statement has come up before and exists somewhere in these bits and bytes. & this is what my upcoming rehaul of this site in React is for. :)
+
+</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">We just published a full project tutorial showing how to build Conway&#39;s Game of Life using React. (1 hour watch) <a href="https://t.co/eOmmhNL8Z7">https://t.co/eOmmhNL8Z7</a></p>&mdash; freeCodeCamp (@freeCodeCamp) <a href="https://twitter.com/freeCodeCamp/status/913115880984383493?ref_src=twsrc%5Etfw">September 27, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Add entries and do examples of iterator methods in ecma view</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>.reduce() .map() .filter() --.some() .every() .find() examples still pending</li>
+  </ol>
+
+  <hr />
   <h2 class="date">Wednesday September 27th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Back to styled components, understanding the tools much better now. Leveling up my comfort with React. Hands on the tools (rather than createReactApp) is definitely the way to proceed. Brian Holt recommends css modules for production, but doesn't go into setting up the tools for it. --Probably because there's too much on the curriculum to get into it. It's an amazing class.</h3>
