--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,8 +20,23 @@
     </ol>
 https://youtu.be/pw6shMBnISQ
     <hr />
-    https://youtu.be/1DMolJ2FrNY
   -->
+  <h2 class="date">Friday September 29th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Getting back in to GSAP while iterating over React stuff.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>entries in GSAP for callbacks, pause:true and other built-in features.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span>Only a few hours to work today, Classes in the morning tomorrow</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Thursday, September 28th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Woah. Had a tough time dealing with manipulating the result of a promise call today. --Pushing, that is, to the first arg in a reduce() method. But thankfully, I wrote about it in the ecma view.
@@ -39,6 +54,7 @@ https://youtu.be/pw6shMBnISQ
   <h3>Done: </h3>
   <ol class="done">
     <li>.reduce() .map() .filter() --.some() .every() .find() examples still pending</li>
+    <li>reduce() an object with ajax called data</li>
   </ol>
 
   <hr />
@@ -54,7 +70,7 @@ https://youtu.be/pw6shMBnISQ
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Styled Components Exercise and entry-done!</li>
     <li>Back into React: Go to vid 21 to prepare porting of this app into REACT with loading data<img class="right w30" src="./img/dataload.png" alt="react data load code"> <br />
     use .map() an array of one thing into an array of another... <br /> we have an array of data from which to create an array of components of each object in that array. (vid 21 Loadingjsondata) cf. BrianHolt FEM</li>
 
