--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -34,7 +34,7 @@ https://youtu.be/pw6shMBnISQ
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>delays, onComplete feature of GSAP *<span class="ltred">*NEEDS EDIT!*</span>onCompleteParams section</li>
   </ol>
   <hr />
   <h2 class="date">Thursday, September 28th, 2017</h2>
