--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,6 +21,26 @@
 https://youtu.be/pw6shMBnISQ
     <hr />
   -->
+  <h2 class="date">Wednesday October 4th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">I've started on a project that is the UI for a larger project... --Oy. Eating an elephant one bite at a time. It is an attempt to draw (with pure css) the inside of a living-room where the windows contain the calls-to-action. Cel animation is used for rain. <br />
+    I've always wanted to try a cel animation rendering rain like this...</h3><img class="w20 right" src="./img/animerain.gif" alt="anime rain">
+    <h3 class="subtitle">Anyway, it has a really nice effect-- <a target="_blank" href="https://codepen.io/beau_dev/">HERE</a> I've split up the css components with a mind toward modularity--keeping RWD in mind. It's not HUGE progress, but finally... progress that I'm proud of.<br />
+    I'm also planning to srcset all the images.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Do sounds for mouseover, click, etc for one window. The rest will be easy. --Using <a target="_blank" href="https://courses.wesbos.com/account/access/5849e6dd59cff71e8ec6b257/view/6cf22385d8">Wes Bos's tutorial</a> for the sounds.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+https://youtu.be/pw6shMBnISQ
+  <hr />
   <h2 class="date">Friday September 29th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Getting back in to GSAP while iterating over React stuff.</h3>
